fixed canvas readability

--- a/css/color.css
+++ b/css/color.css
@@ -30,7 +30,7 @@
 	/* About */
 	--about-background: rgb(251, 244, 239);
 	--about-content-p: rgb(82, 82, 82);
-	--about-content: rgb(110, 220, 224);
+	--about-content: rgb(59, 190, 195);
 	--about-content-info-list-li: rgb(0, 0, 0);
 	--about-content-info-list-li-strong: rgb(3, 3, 3);
 	--about-content-info-list-li-span: rgb(119, 119, 119);
